--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,16 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-
+    <servlet>
+        <servlet-name>NewsServlet</servlet-name>
+        <servlet-class>Controller.NewsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>NewsServlet</servlet-name>
-        <url-pattern>/NewsServlet</url-pattern>
+        <url-pattern>/news</url-pattern>
     </servlet-mapping>
-
-    <jsp-config>
-        <jsp-property-group>
-            <url-pattern>*.jsp</url-pattern>
-            <include-prelude>/WEB-INF/newsjsp.jsp</include-prelude>
-        </jsp-property-group>
-    </jsp-config>
 </web-app>
