--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,12 +3,39 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
     <servlet>
         <servlet-name>NewsServlet</servlet-name>
         <servlet-class>Controller.NewsServlet</servlet-class>
     </servlet>
+
+    <servlet>
+        <servlet-name>AddArticleServlet</servlet-name>
+        <servlet-class>Controller.AddArticleServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>ConnexionServlet</servlet-name>
+        <servlet-class>Controller.ConnexionServlet</servlet-class>
+    </servlet>
+
+
+
     <servlet-mapping>
         <servlet-name>NewsServlet</servlet-name>
         <url-pattern>/news</url-pattern>
     </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AddArticleServlet</servlet-name>
+        <url-pattern>/addarticle</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ConnexionServlet</servlet-name>
+        <url-pattern>/connexion</url-pattern>
+    </servlet-mapping>
+
+
+
 </web-app>
